src/assets/css/welcome.css
/* ... */
@media screen and (max-width: 701px){
  .mhacks-mid-content-business{
    width: 270px;
  }
  .mhacks-top-header{
    width: 409px;
  }
  .mhacks-top-para{
    width: 270px;
  }
}
@media screen and (max-width: 680px){
  .mhacks-mid-ft-text{
    margin-top: 49%;
  }
}
@media screen and (max-width: 651px){
  .mhacks-mid-ft-text{
    margin-top: 60%;
  }
}
@media screen and (max-width: 610px){
  .mhacks-mid-ft-text{
    margin-top: 76%;
  }
}
  @media screen and (max-width: 601px){
    .mhacks-top-para{
      width: 270px;
    }
    .mhacks-top-header{
      width: 270px;
    }
    .mhacks-mid-header{
      margin-left: 5%;
    }
    .mhacks-mid-content{
      width: 270px;
      line-height: 2em;
      margin-left: -12%;
    }
    .mhacks-mid-content-pic{
      height: 239px;
      width: 230px;
      float: right;
      margin-right: -35%;
    }
    .mhacks-mid-content-business{
      width: 270px;
      margin-left: 20%;
    }
    .mhacks-mid-mission-sec-bg{
      display: none;
    }
    .mhacks-mid-mission-content{
      width: 450px;
      margin-bottom: 250px;
    }
    .contact-form{
      width: 350px;
    }
    .mhacks-last-contact-input-bg{
      display: none;
    }
    .mhacks-last-contact-input{
      width: 125%;
    }  
    .mhacks-last-contact-textarea{
      width: 125%;
    }
    .mhacks-last-contact-btn{
      width: 125%;
    }
  }
  @media screen and (max-width: 557px){
    .alan{
      margin-right: -25px;
    }
    .dani{
      margin-right: -64px;
    }
    .james{
      margin-right: -96px;
    }
    .kavi{
      margin-right: -129px;
    }
  }
  @media screen and (max-width: 544px){
    .mhacks-mid-ft-text{
      margin-top: 85%;
    }
  }
  @media screen and (max-width: 530px){
    .mhacks-mid-ft-text{
      margin-top: 97%;
    }
  }
  @media screen and (max-width: 510px){
    .mhacks-mid-ft-text{
      margin-top: 108%;
    }
  }
  @media screen and (max-width: 496px){
    .mhacks-mid-ft-text{
      margin-top: 120%;
    }
  }
  @media screen and (max-width: 471px){
    
  }
  @media screen and (max-width: 450px){
    .mhacks-mid-ft-text{
      margin-top: 151%;
    }
  }
  @media screen and (max-width: 465px){
    .alan{
      margin-right: -4px;
    }
    .dani{
      margin-right: -39px;
    }
    .james{
      margin-right: -74px;
    }
    .kavi{
      margin-right: -108px;
    }
  }
  @media screen and (max-width: 429px){
    .mhacks-mid-mission-content{
      width: 372px;
    }
    .mhacks-last-contact-input-header{
      margin-top: 25%;
    }
    .mhacks-mid-ft-text{
      color: #fff;
      width: 100%;
      margin: 0 auto;
      margin-top: 32%;
    }
  }
  @media screen and (max-width: 415px){
    .mhacks-top-para{
      width: 270px;
    }
    .mhacks-mid-header{
      margin-left: -2%;
    }
    .mhacks-mid-content{
      width: 270px;
      line-height: 2em;
      margin-left: -40%;
    }
    .mhacks-mid-content-pic{
      height: 239px;
      width: 230px;
      float: right;
      margin-right: -35%;
    }
    .mhacks-mid-content-business{
      width: 270px;
      margin-left: -5%;
    }
    .mhacks-mid-mission-sec-bg{
      display: none;
    }
    .mhacks-mid-mission-content{
      width: 320px;
      margin-bottom: 195px;
    }
    .mhacks-last-contact-header{
      margin-top: 10%;
      margin-right: 8%;
    }
    .mhacks-last-contact-input-bg{
      display: none;
    }
    .contact-form{
      width: 350px;
    }
    .mhacks-last-contact-input-header{
      margin-top: 20%;
      margin-bottom: 10%;
    }
    .mhacks-top-header{
      width: 270px;
    }
}
@media screen and (max-width: 413px){
  .mhacks-last-contact-input{
    width: 120%;
  }
  .mhacks-last-contact-textarea{
    width: 120%;
  }
  .mhacks-last-contact-btn{
    width: 120%;
  }
}
@media screen and (max-width: 401px){
  .mhacks-mid-ft-text{
    margin-top: 45%;
  }
}
@media screen and (max-width: 386px){
  .mhacks-last-contact-input{
    width: 110%;
  }
  .mhacks-mid-team-header{
    margin-top: -40%;
  }
  .mhacks-mid-ft-text{
    margin-top: 55%;
  }
}
@media screen and (max-width: 376px){
  .mhacks-mid-team-header{
    margin-top: -41%;
  }
  .mhacks-last-contact-input{
    width: 97%;
  }
  .mhacks-last-contact-textarea{
    width: 97%;
  }
  .mhacks-last-contact-btn{
    width: 97%;
  }
}
@media screen and (max-width: 362px){
  .mhacks-mid-ft-text{
    margin-top: 77%;
  }
}
@media screen and (max-width: 350px){
  .mhacks-mid-ft-text{
    margin-top: 91%;
  }
}
@media screen and (max-width: 333px){
  .mhacks-mid-ft-text{
    margin-top: 106%;
  }
}
@media screen and (max-width: 321px){
  .mhacks-mid-mission-text{
    width: 180px;
  }
  .mhacks-mid-mission-content{
    width: 270px;
  }
  .mhacks-last-contact-input{
    width: 88%;
  }
  .alan{
    margin-right: 30px;
  }
  .dani{
    margin-right: -9px;
  }
  .james{
    margin-right: -45px; 
  }
  .kavi{
    margin-right: -78px;
  }
  .mhacks-last-footer-bg{
    margin-top: 13%;
  }
  .mhacks-mid-header{
    margin-left: -8%;
  }
  .mhacks-mid-header-business{
    margin-right: -2%;
  }
  .mhacks-mid-content-business{
    margin-left: -14%;
  }
  .mhacks-last-contact-textarea{
    width: 88%;
  }
  .mhacks-last-contact-btn{
    width: 88%;
  }
}
@media screen and (max-width: 305px){
  .mhacks-mid-ft-text{
    margin-top: 158%;
  }
  .mhacks-mid-header{
    font-size: 1.9em;
  }
}

